--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
@@ -33,6 +34,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "rimraf": "^5.0.1",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0"
   }
 }
