--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "swagger-ui-express": "^4.6.3",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   }
 }
