--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.3.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
@@ -30,10 +31,12 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.9.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "sqlite3": "^5.1.6",
