Add container and refactor usecases

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rimraf": "^5.0.1",
     "sqlite3": "^5.1.6",
     "swagger-ui-express": "^4.6.3",
+    "tsyringe": "^4.8.0",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   }
