--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
@@ -40,6 +41,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "sqlite3": "^5.1.6",
