--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
+      "@config/*": ["src/config/*"],
       "@roles/*": ["src/roles/*"],
       "@shared/*": ["src/shared/*"],
       "@users/*": ["src/users/*"]
